[tool.poetry]
name = "arc-cli"
version = "7.0.1"
description = "A Regular CLI"
authors = ["Sean Collings <seanrcollings@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/seanrcollings/arc"
documentation = "https://arc.seanrcollings.com"
keywords = ["CLI", "extendable", "easy", "arc"]
classifiers= [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
packages=[{ include = "arc" }]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.910"
pylint = "^2.7.0"
pytest = "^6.2.4"
pdoc = "^7.1.1"
mkdocs-material = "^8.1.3"
PyYAML = "^6.0"
types-PyYAML = "^6.0.1"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}
Jinja2 = "3.0.3"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
