[project]
name = "arc-cli"
version = "8.7.1"
description = "Package for creating CLI's with ease."
authors = [{ name = "Sean Collings", email = "me@seancollings.dev" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "MIT"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Typing :: Typed",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/seanrcollings/arc"
Documentation = "https://arc.seancollings.dev"

[dependency-groups]
dev = [
    "mypy>=1.0,<2",
    "pytest>=9.0.03,<10",
    "pdoc>=7.1.1,<8",
    "mkdocs-material>=8.1.3,<9",
    "PyYAML>=6.0.2,<7",
    "types-PyYAML>=6.0.2,<7",
    "mkdocstrings[python]>=0.19.0,<0.20",
    "Jinja2==3.0.3",
    "mkdocs-awesome-pages-plugin>=2.8.0,<3",
    "hypothesis>=6.155.2,<7",
    "pytest-cov>=4.0.0,<5",
    "httpx>=0.28.1",
    "ruff>=0.15.16",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-name = ["arc"]
module-root = ""

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
